Mon Feb  2 19:19:16 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* app/channels_dialog.c: 
	* app/layers_dialog.c:  Added gtk_widget_ref and gtk_widget_unref
	calls to keep channel & layer widgets from dying when reordering
	the channel/layer stacks.
	
Sat Jan 31 20:49:11 EST 1998 Adrian Likins <adrian@gimp.org>

	* plug-ins/edge.c: added a check so it wouldnt segfault when
	passed a non-existent drawable
	
	* plug-ins/threshold_alpha.c:  added a non-interactive mode

	* app/brightness_contrast.c
	* app/color_balance.c 
	* app/colormaps.c
	* app/curves.c 
	* app/hue_saturation.c
	* app/posterize.c 
	* app/threshold.c : added a check so it wouldnt except
	 a indexed drawable. This was previosly possible via the pdb.

Sat Jan 31 00:16:22 PST 1998 Manish Singh <yosh@gimp.org>

        * plug-ins/xpm/xpm.c: Changed to use g_strcasecmp

Fri Jan 30 13:47:57 1998  Federico Mena  <federico@bananoid.nuclecu.unam.mx>

	* app/gradient.c: Applied patch from Wolfgang Hofer
	<hof@ws6310.gud.siemens.at> to let the user load the segment
	endpoint color from the current foreground color.  It also makes
	the preview un-resizable, which is not a complete fix for the
	preview resizing bug.

Fri Jan 30 11:48:04 EST 1998 Adrian Likins <adrian@gimp.org>

	* More plugin non-interactive fixes:
		DigitalSignature, hot, sinus, smooth_palette

Thu Jan 29 19:25:52 EST 1998 Adrian Likins <adrian@gimp.org>

	* fixed the non-iteractive modes for plugins:
		exchange, holes, grid, deinterlace
	(mainly expecting wrong number of arguments or just ingome
	non-interactive mood entirely)

Thu Jan 29 01:05:10 PST 1998 Manish Singh <yosh@gimp.org>

	* updated refract and warp plugins
	* changed the INSTALL file to reflect the fact that gtk is a
	separate package
	* app/text_tool.c: small patch for indexed images and
	antialiased toggle

Thu Jan 29 00:00:54 PST 1998 Manish Singh <yosh@gimp.org>

	* removed all usage of linked.[ch] and switched to GSLists
