@@ -1,3 +1,8 @@
+Tue Feb  3 17:52:34 1998  Scott Goehring  <scott@poverty.bloomington.in.us>
+
+	* app/interface.[ch] app/app_procs.[ch]: Changes to deal with new
+	GTK refcounting regime.
+
 Mon Feb  2 19:19:16 1998  Scott Goehring  <scott@poverty.bloomington.in.us>
 
 	* app/channels_dialog.c: 
